2005-09-02	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_get_path_at_pos): Actually accept
	  widget coordinates here, to be compatible with GtkTreeView.

2005-09-01	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_dispose): Reset the drag destination
	  item as we use a tree row reference here, which can cause a memory
	  leak with custom DnD implementations.

2005-08-31	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.{c,h}, exo/exo.symbols: Add two new methods
	  exo_icon_view_widget_to_icon_coords() and
	  exo_icon_view_icon_to_widget_coords(), which are used to translate
	  between widget coordinates and icon window coordinates.
	* exo/exo-icon-view.c(exo_icon_view_get_dest_item_at_pos): Be consistent
	  with the other methods that accept (x,y) coordinates and use icon
	  window coordinates instead of widget coordinates.

2005-08-31	Benedikt Meurer <benny@xfce.org>

	* po/es.po: Update spanish translations, thanks to Patricio Carr
	  <pato@patocarr.com>.

2005-08-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-bar.c, exo/exo-icon-view.c: Use alloca wrappers
	  provided by GLib.

2005-08-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_expose_event): No need to setup
	  the clipping for the fill GC, as we'll only draw within the clip
	  region anyways.

2005-08-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Allocate the GCs required for drawing the
	  rubberband selection when the rubberbanding starts and deallocate
	  them when rubberbanding is done, instead of allocating them for
	  every expose_event handler invokation.

2005-08-25	Benedikt Meurer <benny@xfce.org>

	* exo/exo-private.{c,h}: Drop the MIME info parser.
	* docs/reference/tmpl/*.sgml: Regenerate the API documentation
	  templates.
	* docs/reference/exo-docs.sgml: Don't list libxfcegui4 as dependency
	  any longer.

2005-08-22	Benedikt Meurer <benny@xfce.org>
